--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -40,15 +40,23 @@ nav div {
 }
 
 nav span {
-    background: white;
+    /* background: white; */
     color: #2E282A;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-inline: 9px;
     border-radius: 15px;
-    height: 35px;
-    outline: 1px solid rgba(0, 0, 0, 0.237);
+    height: 39px;
+    /* outline: 1px solid rgba(0, 0, 0, 0.237); */
+    outline: 1px solid rgba(245, 245, 245, 0.175);
+    background-color: rgba(245, 245, 245, 0.175);
+    /* background-color: #495057; */
+}
+
+nav span input::placeholder {
+    color: #fff;
+    opacity: .7;
 }
 
 nav span input {
@@ -73,6 +81,13 @@ nav div .fa-user {
     nav span {
         width: 50%;
         padding-right: 8px;
+        transition: width 0.3s ease;
+        transform-origin: left;
+    }
+
+    nav span:active, nav span:hover {
+        background-color: rgba(245, 245, 245, 0.618);
+        width: 200px;
     }
 }
 
@@ -273,6 +288,18 @@ nav div .fa-user {
 }
 
 @media screen and (min-width: 600px) {
+
+    nav span {
+        width: 50%;
+        padding-right: 8px;
+        transition: width 0.3s ease-in-out;
+        transform-origin: left;
+    }
+
+    nav span:active, nav span:hover {
+        background-color: rgba(245, 245, 245, 0.618);
+        width: 300px;
+    }
 
     #head {
         margin-left: 50px;
