--- a/public/styles/movie.css
+++ b/public/styles/movie.css
@@ -51,9 +51,15 @@ nav span {
     justify-content: space-between;
     padding-inline: 9px;
     border-radius: 15px;
-    height: 35px;
+    height: 39px;
     z-index: 1;
-    outline: 1px solid rgba(0, 0, 0, 0.237);
+    outline: 1px solid rgba(245, 245, 245, 0.175);
+    background-color: rgba(245, 245, 245, 0.175);
+}
+
+nav span input::placeholder {
+    color: #fff;
+    opacity: .7;
 }
 
 nav span input {
@@ -79,6 +85,13 @@ nav div .fa-user {
     nav span {
         width: 50%;
         padding-right: 8px;
+        transition: width 0.3s ease;
+        transform-origin: left;
+    }
+
+    nav span:active, nav span:hover {
+        background-color: rgba(245, 245, 245, 0.618);
+        width: 200px;
     }
 }
 
