--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -340,3 +340,12 @@ nav div .fa-user {
     }
 
 } 
+
+/* Seach  */
+
+.search-results {
+    display: none;
+    /* flex-wrap: wrap;
+    gap: 10px;
+    padding: 20px; */
+}
