--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -72,6 +72,10 @@ nav div .fa-user {
     font-size: 20px;
 }
 
+.fa-magnifying-glass {
+    color: white;
+}
+
 @media screen and (max-width: 600px) {
     nav {
         justify-content: space-between;
@@ -342,10 +346,3 @@ nav div .fa-user {
 } 
 
 /* Seach  */
-
-.search-results {
-    display: none;
-    /* flex-wrap: wrap;
-    gap: 10px;
-    padding: 20px; */
-}
