--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -20,6 +20,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     background: transparent; 
+    /* background: black; */
     color: white;
     padding: 25px 20px;
     position: relative;
@@ -107,6 +108,7 @@ nav div .fa-user {
     justify-content: center;
     align-items: center;
     top: -95px;
+    /* transition: change 1s ease-in-out; */
 }
 
 .banner::before {
@@ -180,8 +182,9 @@ nav div .fa-user {
     border-radius: 20px;
 }
 
-.banner-content button:hover {
-    background: #ff79b0; 
+.banner-content div:last-child:hover {
+    background: white; 
+    color: black;
 }
 
 #head {
@@ -268,7 +271,11 @@ nav div .fa-user {
 .latest-movies div,
 .latest-shows div,
 .coming-soon div {
+    cursor: pointer;
     margin-bottom: 5px;
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
 }
 
 
@@ -354,6 +361,7 @@ nav div .fa-user {
     align-items: center;
     margin-top: 10px;
     flex-wrap: wrap;
+    animation: appear 5s linear;
 }
 
 .search-res img ~ p {
@@ -391,7 +399,11 @@ nav div .fa-user {
 }
 
 .search-res div {
+    cursor: pointer;
     margin-bottom: 5px;
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
 }
 
 
@@ -419,3 +431,16 @@ nav div .fa-user {
     }
 
 } 
+
+@keyframes appear {
+
+    from {
+        opacity: 0;
+        scale: 0.5;
+    }
+
+    to {
+        opacity: 1;
+        scale: 1;
+    }
+}
