--- a/public/styles/movie.css
+++ b/public/styles/movie.css
@@ -1,398 +1,377 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
-    box-sizing: border-box;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  box-sizing: border-box;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
 body {
-    /* background: rgba(0, 0, 0, 0.97); */
-    background: #241f18;
+  /* background: rgba(0, 0, 0, 0.97); */
+  background: #241f18;
 }
 
 body::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
-
 nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    /* background: rgba(0, 0, 0, 0.749);  */
-    background: #241f18;
-    color: white;
-    padding: 42px 20px;
-    position: relative;
-    /* z-index: 10;  */
-    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  /* background: rgba(0, 0, 0, 0.749);  */
+  background: #241f18;
+  color: white;
+  padding: 42px 20px;
+  position: relative;
+  /* z-index: 10;  */
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
 nav h1 {
-    font-size: 21px;
-    font-family: monospace;
-    font-weight: 900;
-    z-index: 1;
+  font-size: 21px;
+  font-family: monospace;
+  font-weight: 900;
+  z-index: 1;
 }
 
 nav div {
-    display: flex;
-    justify-content: right;
-    gap: 20px;
-    align-items: center;
+  display: flex;
+  justify-content: right;
+  gap: 20px;
+  align-items: center;
 }
 
 nav span {
-    background: white;
-    color: #2E282A;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-inline: 9px;
-    border-radius: 15px;
-    height: 39px;
-    z-index: 1;
-    outline: 1px solid rgba(245, 245, 245, 0.175);
-    background-color: rgba(245, 245, 245, 0.175);
+  background: white;
+  color: #2e282a;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-inline: 9px;
+  border-radius: 15px;
+  height: 39px;
+  z-index: 1;
+  outline: 1px solid rgba(245, 245, 245, 0.175);
+  background-color: rgba(245, 245, 245, 0.175);
 }
 
 nav span input::placeholder {
-    color: #fff;
-    opacity: .7;
+  color: #fff;
+  opacity: 0.7;
 }
 
 nav span input {
-    border: none;
-    outline: none;
-    padding: 5px;
-    font-size: 15px;
-    background: transparent;
-    width: 100%;
-    color: white;
+  border: none;
+  outline: none;
+  padding: 5px;
+  font-size: 15px;
+  background: transparent;
+  width: 100%;
+  color: white;
 }
 
 nav div .fa-user {
-    font-size: 20px;
-    z-index: 1;
+  font-size: 20px;
+  z-index: 1;
 }
 
 .fa-magnifying-glass {
-    color: white;
+  color: white;
 }
 
 @media screen and (max-width: 600px) {
-    nav {
-        justify-content: space-between;
-        padding: 30px 20px;
-    }
+  nav {
+    justify-content: space-between;
+    padding: 30px 20px;
+  }
 
-    nav span {
-        width: 50%;
-        padding-right: 8px;
-        transition: width 0.3s ease;
-        transform-origin: left;
-    }
+  nav span {
+    width: 50%;
+    padding-right: 8px;
+    transition: width 0.3s ease;
+    transform-origin: left;
+  }
 
-    nav span:active, nav span:hover {
-        /* background-color: rgba(245, 245, 245, 0.618); */
-        background-color: #121212;
-        width: 200px;
-    }
+  nav span:active,
+  nav span:hover {
+    /* background-color: rgba(245, 245, 245, 0.618); */
+    background-color: #121212;
+    width: 200px;
+  }
 }
 
 /* Video */
 
 #container {
-    width: 100%;
-    margin: 0 auto;
-    /* background: red; */
+  width: 100%;
+  margin: 0 auto;
+  /* background: red; */
 }
 
 .page #video {
-    display: flex;
-    color: white;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-    width: 100%;
-    padding-inline: 8px;
+  display: flex;
+  color: white;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  width: 100%;
+  padding-inline: 8px;
+  /* background: linear-gradient(to bottom right, #e0e0e013, #2b2b2b, #000000); */
 }
 
 #video iframe {
-    width: 100%;
-    opacity: .85;
-    border-radius: 10px;
-    /* box-shadow: rgba(172, 19, 19, 0.651) 0px -4px 750px; */
-    box-shadow: rgba(172, 19, 19, 0.556) -5px -4px 750px;
+  width: 100%;
+  opacity: 0.85;
+  border-radius: 10px;
+  /* box-shadow: rgba(172, 19, 19, 0.651) 0px -4px 750px; */
+  box-shadow: rgba(172, 19, 19, 0.556) -5px -4px 750px;
 }
 
 #container .page .details {
-    margin-top: 20px;
-    padding: 5px;
-    margin-inline: 8px;
-    color: white;
+  margin-top: 20px;
+  padding: 5px;
+  margin-inline: 8px;
+  color: white;
 }
 
 .page .details h1 {
-    font-size: 25px;
-    font-weight: 500;
-    opacity: .9;
+  font-size: 25px;
+  font-weight: 500;
+  opacity: 0.9;
 }
 
 .page .details h1 ~ div {
-    display: flex;
-    gap: 12px;
-    margin: 13px 0 10px 0;
-    opacity: .89;
-    align-items: center;
+  display: flex;
+  gap: 12px;
+  margin: 13px 0 10px 0;
+  opacity: 0.89;
+  align-items: center;
 }
 
 .details p:first-child {
-    color: black;
-    font-weight: 600;
-    background: white;
-    padding: 2px 12px;
-    border-radius: 15px;
+  color: black;
+  font-weight: 600;
+  background: white;
+  padding: 2px 12px;
+  border-radius: 15px;
 }
 
 .details div + p {
-    margin-block: 20px;
-    line-height: 22px;
-    opacity: .80;
+  margin-block: 20px;
+  line-height: 22px;
+  opacity: 0.8;
 }
 
 .details div + p ~ p {
-    margin-bottom: 10px;
-    opacity: .80;
+  margin-bottom: 10px;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 600px) {
-    
-    .page .details img {
-        display: none;
-    }
+  .page .details img {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 600px) {
+  .page .details {
+    display: flex;
+    gap: 25px;
+    /* flex-wrap: wrap; */
+    justify-content: flex-start;
+    align-items: center;
+  }
 
-    .page .details {
-        display: flex;
-        gap: 25px;
-        /* flex-wrap: wrap; */
-        justify-content: flex-start;
-        align-items: center;
-    }
+  .details img {
+    max-width: 250px;
+    border-radius: 15px;
+    opacity: 0.85;
+    border: 3px solid rgba(128, 128, 128, 0.404);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  }
 
-    .details img {
-        max-width: 250px;
-        border-radius: 15px;
-        opacity: .85;
-        border: 3px solid rgba(128, 128, 128, 0.404);
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    }
-
-    nav span:active, nav span:hover {
-        /* background-color: rgba(245, 245, 245, 0.618); */
-        background-color: #121212;
-        transition: background-color 1s ease-in-out;
-    }
+  nav span:active,
+  nav span:hover {
+    /* background-color: rgba(245, 245, 245, 0.618); */
+    background-color: #121212;
+    transition: background-color 1s ease-in-out;
+  }
 }
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
+  .page #video {
+    height: 45vh;
+  }
 
-    .page #video {
-        height: 45vh;
-    }
-
-    .page #video iframe {
-        height: 100%;
-    }
+  .page #video iframe {
+    height: 100%;
+  }
 }
 
 @media screen and (min-width: 1023px) and (max-width: 1025px) {
+  .page #video {
+    max-height: 45vh;
+    min-width: 99vw;
+  }
 
-    .page #video {
-        max-height: 45vh;
-        min-width: 99vw;
-    }
-
-    .page #video iframe {
-        height: 100%;
-    }
+  .page #video iframe {
+    height: 100%;
+  }
 }
 
-@media screen and (min-width: 1025px){
+@media screen and (min-width: 1025px) {
+  .page #video {
+    height: 90vh;
+    max-width: 90vw;
+    margin: 0 auto;
+  }
 
-    .page #video {
-        height: 90vh;
-        max-width: 90vw;
-        margin: 0 auto;
-    }
+  .page #video iframe {
+    height: 100%;
+    object-fit: contain;
+  }
 
-    .page #video iframe {
-        height: 100%;
-        object-fit: contain;
-    }
-
-    .page > div {
-        padding-inline: 94px;
-        margin-block: 50px;
-    }
+  .page > div {
+    padding-inline: 94px;
+    margin-block: 50px;
+  }
 }
-
 
 /* Recommendation */
 
 .page .recommends {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    align-items: center;
-    /* overflow-x: scroll; */
-    flex-wrap: wrap;
-    padding: 10px 0px;
+  display: grid;
+  gap: 20px;
+  padding-inline: 10px;
+  grid-template-columns: repeat(2, 2fr);
 }
 
 .page .recommends img ~ p {
-    color: white;
-    font-weight: 500;
-    margin: 10px 0px 12px 0px;
+  color: white;
+  font-weight: 525;
+  font-size: 1.1em;
+  margin: 8px 0px 1rem 2px;
+  text-align: start;
 }
 
 .page .recommends .info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    opacity: .79;
-    padding-inline: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  color: white;
+  opacity: 0.79;
+  padding-inline: 4px;
 }
 
 .page .recommends .info h2 {
-    font-size: 15px;
-    font-weight: 500;
+  font-size: 1em;
+  font-weight: 500;
 }
 
 .page .recommends .info p {
-    font-size: 12px;
-    font-weight: 500;
-    color: white;
+  font-size: 1em;
+  font-weight: 500;
+  color: white;
 }
 
 .page .recommends div img {
-    max-width: 191px;
-    height: fit-content;
-    height: 283px;
-    object-fit: cover;
-    border-radius: 8px;
+  /* max-width: 191px; */
+  max-width: 100%;
+  height: fit-content;
+  object-fit: cover;
+  border-radius: 8px;
 }
 
-.recommends div {
-    margin: 5px;
-    padding: .3px;
-    /* background: #e0e0e009; */
-    /* background: linear-gradient(to bottom right, #e0e0e013, #2b2b2b, #000000); */
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-
+.recommends > div {
+  padding: 0.7em 0.5em;
+  /* background: #e0e0e009; */
+  background: linear-gradient(to bottom right, #e0e0e013, #2b2b2b, #000000);
+  border-radius: 10px;
 }
 
-
-@media screen and (max-width: 375px) {
-
-    .page .recommends {
-        gap: 20px;
-    }
-
-    .page .recommends div img {
-        max-width: 150px;
-        height: 222px;
-    }
+@media screen and (min-width: 768px) and (max-width: 1025px) {
+  .page .recommends {
+    margin-block: 1em;
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
-@media screen and (min-width: 600px) {
-
-    .page .recommends div img {
-        height: 290px;
-        max-width: 200px;
-    }
-
-} 
+@media screen and (min-width: 1025px) {
+  .page .recommends {
+    margin-block: 1em;
+    grid-template-columns: repeat(8, 1fr);
+    margin-inline: 6.5em;
+  }
+}
 
 /* Seach  */
 
-
 .search-res {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    flex-wrap: wrap;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  flex-wrap: wrap;
 }
 
 .search-res img ~ p {
-    color: white;
-    font-weight: 500;
-    margin: 10px 0px 12px 0px;
+  color: white;
+  font-weight: 500;
+  margin: 10px 0px 12px 0px;
 }
 
 .search-res .info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    opacity: .79;
-    padding-inline: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  opacity: 0.79;
+  padding-inline: 4px;
 }
 
 .search-res .info h2 {
-    font-size: 15px;
-    font-weight: 500;
+  font-size: 15px;
+  font-weight: 500;
 }
 
 .search-res .info p {
-    font-size: 12px;
-    font-weight: 500;
-    color: white;
+  font-size: 12px;
+  font-weight: 500;
+  color: white;
 }
 
 .search-res div img {
-    max-width: 191px;
-    height: fit-content;
-    height: 283px;
-    object-fit: cover;
-    border-radius: 5px;
+  max-width: 191px;
+  height: fit-content;
+  height: 283px;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 .search-res div {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
-
-
 @media screen and (max-width: 375px) {
-    
-    .search-res {
-        gap: 20px;
-    }
+  .search-res {
+    gap: 20px;
+  }
 
-    .search-res div img {
-        max-width: 150px;
-        height: 222px;
-    }
+  .search-res div img {
+    max-width: 150px;
+    height: 222px;
+  }
 }
 
 @media screen and (min-width: 600px) {
+  .search-res div {
+    margin-bottom: 15px;
+  }
 
-    .search-res div{
-        margin-bottom: 15px;
-    }
-
-    .search-res div img {
-        height: 290px;
-        max-width: 195px;
-    }
-
-} 
+  .search-res div img {
+    height: 290px;
+    max-width: 195px;
+  }
+}
